KSENROLL-12300:Fix for spacing in confirmation of Registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@67034 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
@@ -29,8 +29,8 @@
   font-family: @primaryFontFamily;
   font-size: 16px;
   font-weight: normal;
-  padding: 10px;
-  padding-left:40px;
+  padding: 18px;
+  padding-left:45px;
   background-image: url("../images/validation/spinner_big.gif");
   background-repeat: no-repeat;
   background-position: @iconPosition;
