--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/confirmation.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/confirmation.less
@@ -2,7 +2,7 @@
 
 .kscr-Confirmation-container{
     background-color: #FCFCFC;
-    padding: 10px;
+    padding: 5px 10px;
     border: 1px @cardBorderColor solid;
     border-bottom-width: 2px;
 
@@ -22,7 +22,7 @@
 }
 
 .kscr-Confirmation-buttons{
-   padding: 10px 0px;
+   padding: 10px 0 5px;
    text-align: right;
 
 }
